--- a/vs2010-mfc/vs2010-mfc.vcxproj
+++ b/vs2010-mfc/vs2010-mfc.vcxproj
@@ -11,7 +11,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\simple-cpp\inc\simple\string.cpp" />
+    <ClCompile Include="..\inc\simple-win32\dynamic.cpp" />
+    <ClCompile Include="..\inc\simple-win32\flashcall.cpp" />
     <ClCompile Include="..\inc\simple-win32\mfc\DlgTemplate.cpp" />
+    <ClCompile Include="..\inc\simple-win32\mfc\FlashCtrl.cpp" />
+    <ClCompile Include="..\inc\simple-win32\mfc\FlashCtrlEx.cpp" />
     <ClCompile Include="..\inc\simple-win32\mfc\IECtrl.cpp" />
     <ClCompile Include="..\inc\simple-win32\mfc\IECtrlEx.cpp" />
     <ClCompile Include="..\tests\main.cpp" />
@@ -19,7 +24,12 @@
     <ClCompile Include="test_cases.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\simple-cpp\inc\simple\string.h" />
+    <ClInclude Include="..\inc\simple-win32\dynamic.h" />
+    <ClInclude Include="..\inc\simple-win32\flashcall.h" />
     <ClInclude Include="..\inc\simple-win32\mfc\DlgTemplate.h" />
+    <ClInclude Include="..\inc\simple-win32\mfc\FlashCtrl.h" />
+    <ClInclude Include="..\inc\simple-win32\mfc\FlashCtrlEx.h" />
     <ClInclude Include="..\inc\simple-win32\mfc\IECtrl.h" />
     <ClInclude Include="..\inc\simple-win32\mfc\IECtrlEx.h" />
     <ClInclude Include="stdafx.h" />
@@ -74,7 +84,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>comsupp.lib;comsuppw.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>@if not exist test_cases.cpp  @echo  // test_cases    &gt;    test_cases.cpp
@@ -102,7 +112,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>comsupp.lib;comsuppw.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>@if not exist test_cases.cpp  @echo  // test_cases    &gt;    test_cases.cpp
