--- a/vs2010-mfc/vs2010-mfc.vcxproj.filters
+++ b/vs2010-mfc/vs2010-mfc.vcxproj.filters
@@ -28,6 +28,12 @@
     <ClCompile Include="..\..\simple-cpp\inc\simple\string.cpp">
       <Filter>simple-cpp</Filter>
     </ClCompile>
+    <ClCompile Include="..\inc\simple-win32\mfc\HtmlStatic.cpp">
+      <Filter>simple-cpp-win32\mfc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\inc\simple-win32\drawhtml.cpp">
+      <Filter>simple-cpp-win32</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="simple-cpp-win32">
@@ -66,6 +72,12 @@
     </ClInclude>
     <ClInclude Include="..\..\simple-cpp\inc\simple\string.h">
       <Filter>simple-cpp</Filter>
+    </ClInclude>
+    <ClInclude Include="..\inc\simple-win32\mfc\HtmlStatic.h">
+      <Filter>simple-cpp-win32\mfc</Filter>
+    </ClInclude>
+    <ClInclude Include="..\inc\simple-win32\drawhtml.h">
+      <Filter>simple-cpp-win32</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
