--- a/vs2010/vs2010.vcxproj
+++ b/vs2010/vs2010.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="..\..\simple-cpp\inc\simple\_third_jwrite.c" />
     <ClCompile Include="..\..\simple-cpp\inc\simple\_third_pwgen.c" />
     <ClCompile Include="..\..\simple-cpp\inc\simple\_third_url_parser.c" />
+    <ClCompile Include="..\inc\simple-win32\bitmaphdc.cpp" />
     <ClCompile Include="..\inc\simple-win32\dll.cpp" />
     <ClCompile Include="..\inc\simple-win32\drawhtml.cpp" />
     <ClCompile Include="..\inc\simple-win32\dynamic.cpp" />
@@ -55,6 +56,7 @@
     <ClInclude Include="..\..\simple-cpp\inc\simple\package.h" />
     <ClInclude Include="..\..\simple-cpp\inc\simple\string.h" />
     <ClInclude Include="..\inc\simple-win32\anti.h" />
+    <ClInclude Include="..\inc\simple-win32\bitmaphdc.h" />
     <ClInclude Include="..\inc\simple-win32\dispatch_impl.h" />
     <ClInclude Include="..\inc\simple-win32\dispatch_ptr.h" />
     <ClInclude Include="..\inc\simple-win32\dll.h" />
