--- a/vs2010/vs2010.vcxproj.filters
+++ b/vs2010/vs2010.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClCompile Include="..\inc\simple-win32\desktop.cpp">
       <Filter>simple-cpp-win32</Filter>
     </ClCompile>
+    <ClCompile Include="..\inc\simple-win32\gdiplus\subimage.cpp">
+      <Filter>simple-cpp-win32\gdiplus</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="simple-cpp-win32">
@@ -133,6 +136,9 @@
     </Filter>
     <Filter Include="simple-cpp">
       <UniqueIdentifier>{27a293bc-6afe-4f39-84dd-b915f5833fea}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="simple-cpp-win32\gdiplus">
+      <UniqueIdentifier>{ebd14c6d-99f8-4721-83ba-f7859a2c226f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -237,6 +243,9 @@
     </ClInclude>
     <ClInclude Include="..\inc\simple-win32\desktop.h">
       <Filter>simple-cpp-win32</Filter>
+    </ClInclude>
+    <ClInclude Include="..\inc\simple-win32\gdiplus\subimage.h">
+      <Filter>simple-cpp-win32\gdiplus</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
